<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_kcc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/layoutcolor"
    tools:context="com.myapp.finalapp.KCC">

    <TextView
        android:text="@string/kcc"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/kccTextview" />

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kccTextview"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="46dp"
        android:id="@+id/nameTextview" />

    <TextView
        android:text="@string/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nameTextview"
        android:layout_alignRight="@+id/kccTextview"
        android:layout_alignEnd="@+id/kccTextview"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:id="@+id/contactTextview" />

    <TextView
        android:text="@string/praneet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/nameTextview"
        android:layout_alignLeft="@+id/nameTextview"
        android:layout_alignStart="@+id/nameTextview"
        android:layout_marginTop="39dp"
        android:id="@+id/praneetTextview" />

    <TextView
        android:text="8097245128"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_alignTop="@+id/praneetTextview"
        android:layout_alignLeft="@+id/contactTextview"
        android:layout_alignStart="@+id/contactTextview"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:id="@+id/praneetNumber" />

    <TextView
        android:text="@string/bhumit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/praneetTextview"
        android:layout_alignLeft="@+id/praneetTextview"
        android:layout_alignStart="@+id/praneetTextview"
        android:layout_marginTop="42dp"
        android:id="@+id/bhumitTextview" />

    <TextView
        android:text="9664092779"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_alignBottom="@+id/bhumitTextview"
        android:layout_alignLeft="@+id/praneetNumber"
        android:layout_alignStart="@+id/praneetNumber"
        android:id="@+id/bhumitNumber" />

    <TextView
        android:text="@string/saurabh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/bhumitTextview"
        android:layout_alignLeft="@+id/bhumitTextview"
        android:layout_alignStart="@+id/bhumitTextview"
        android:layout_marginTop="43dp"
        android:id="@+id/saurabhTextview" />

    <TextView
        android:text="9167029971"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_alignTop="@+id/saurabhTextview"
        android:layout_alignLeft="@+id/bhumitNumber"
        android:layout_alignStart="@+id/bhumitNumber"
        android:id="@+id/saurabhNumber" />

    <TextView
        android:text="@string/muteeullah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/saurabhTextview"
        android:layout_alignLeft="@+id/saurabhTextview"
        android:layout_alignStart="@+id/saurabhTextview"
        android:layout_marginTop="40dp"
        android:id="@+id/muteeTextview" />

    <TextView
        android:text="9833913747"
        android:autoLink="phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_alignTop="@+id/muteeTextview"
        android:layout_alignLeft="@+id/saurabhNumber"
        android:layout_alignStart="@+id/saurabhNumber"
        android:id="@+id/muteeNumber" />

</RelativeLayout>
