<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myapp.finalapp.WeatherActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icon_na2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/weatherIconImageView" />

    <TextView
        android:text="@string/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/temperatureTextView"
        android:textSize="40sp"
        android:height="50sp"
        android:layout_below="@+id/weatherIconImageView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/yahoo_logo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:textSize="30sp"
        android:text="@string/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/locationTextView"
        android:height="40sp"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/conditionTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/condition"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/conditionTextView"
        android:height="30sp"
        android:layout_below="@+id/temperatureTextView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
